parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMENTARIO
    COMENTARIO_MULTILINEA

Grammar

Rule 0     S' -> programa
Rule 1     programa -> sentencias
Rule 2     sentencias -> sentencias sentencia
Rule 3     sentencias -> sentencia
Rule 4     sentencia -> expresion PUNTO_Y_COMA
Rule 5     sentencia -> asignacion PUNTO_Y_COMA
Rule 6     sentencia -> declaracion PUNTO_Y_COMA
Rule 7     sentencia -> estructura_control
Rule 8     sentencia -> funcion_definicion
Rule 9     sentencia -> retorno PUNTO_Y_COMA
Rule 10    sentencia -> BREAK PUNTO_Y_COMA
Rule 11    sentencia -> imprimir_expresion PUNTO_Y_COMA
Rule 12    sentencia -> VERSA expresion PUNTO_Y_COMA
Rule 13    sentencia -> llamada_funcion PUNTO_Y_COMA
Rule 14    sentencia -> NUEVA_LINEA
Rule 15    declaracion -> VERSA IDENTIFICADOR ASIGNACION expresion
Rule 16    expresion -> expresion SUMA expresion
Rule 17    expresion -> expresion RESTA expresion
Rule 18    expresion -> expresion MULTIPLICACION expresion
Rule 19    expresion -> expresion DIVISION expresion
Rule 20    expresion -> expresion MENOR_QUE expresion
Rule 21    expresion -> expresion MAYOR_QUE expresion
Rule 22    expresion -> expresion MENOR_IGUAL_QUE expresion
Rule 23    expresion -> expresion MAYOR_IGUAL_QUE expresion
Rule 24    expresion -> expresion DISTINTO_QUE expresion
Rule 25    expresion -> expresion IGUAL_QUE expresion
Rule 26    expresion -> expresion AND expresion
Rule 27    expresion -> expresion OR expresion
Rule 28    expresion -> TRUE
Rule 29    expresion -> FALSE
Rule 30    expresion -> PARENTESIS_IZQUIERDO expresion PARENTESIS_DERECHO
Rule 31    expresion -> NUMERO
Rule 32    expresion -> IDENTIFICADOR
Rule 33    expresion -> CADENA
Rule 34    expresion -> llamada_funcion
Rule 35    llamada_funcion -> IDENTIFICADOR PARENTESIS_IZQUIERDO argumentos_opt PARENTESIS_DERECHO
Rule 36    argumentos_opt -> argumentos
Rule 37    argumentos_opt -> empty
Rule 38    argumentos -> argumentos COMA expresion
Rule 39    argumentos -> expresion
Rule 40    asignacion -> IDENTIFICADOR ASIGNACION expresion
Rule 41    estructura_control -> SI PARENTESIS_IZQUIERDO expresion PARENTESIS_DERECHO LLAVE_IZQUIERDA sentencias LLAVE_DERECHA
Rule 42    estructura_control -> SI PARENTESIS_IZQUIERDO expresion PARENTESIS_DERECHO LLAVE_IZQUIERDA sentencias LLAVE_DERECHA SINO LLAVE_IZQUIERDA sentencias LLAVE_DERECHA
Rule 43    estructura_control -> MIENTRAS PARENTESIS_IZQUIERDO expresion_booleana PARENTESIS_DERECHO LLAVE_IZQUIERDA sentencias LLAVE_DERECHA
Rule 44    estructura_control -> PARA PARENTESIS_IZQUIERDO asignacion PUNTO_Y_COMA expresion PUNTO_Y_COMA asignacion PARENTESIS_DERECHO LLAVE_IZQUIERDA sentencias LLAVE_DERECHA
Rule 45    expresion_booleana -> TRUE
Rule 46    expresion_booleana -> FALSE
Rule 47    expresion_booleana -> expresion
Rule 48    funcion_definicion -> FUNCION IDENTIFICADOR PARENTESIS_IZQUIERDO parametros_opt PARENTESIS_DERECHO LLAVE_IZQUIERDA sentencias_opt LLAVE_DERECHA
Rule 49    parametros_opt -> parametros
Rule 50    parametros_opt -> empty
Rule 51    sentencias_opt -> sentencias
Rule 52    sentencias_opt -> empty
Rule 53    parametros -> parametros COMA IDENTIFICADOR
Rule 54    parametros -> IDENTIFICADOR
Rule 55    retorno -> RETORNO expresion
Rule 56    empty -> <empty>
Rule 57    imprimir_expresion -> IMPRIMIR PARENTESIS_IZQUIERDO expresion PARENTESIS_DERECHO
Rule 58    imprimir_expresion -> IMPRIMIR PARENTESIS_IZQUIERDO CADENA PARENTESIS_DERECHO

Terminals, with rules where they appear

AND                  : 26
ASIGNACION           : 15 40
BREAK                : 10
CADENA               : 33 58
COMA                 : 38 53
COMENTARIO           : 
COMENTARIO_MULTILINEA : 
DISTINTO_QUE         : 24
DIVISION             : 19
FALSE                : 29 46
FUNCION              : 48
IDENTIFICADOR        : 15 32 35 40 48 53 54
IGUAL_QUE            : 25
IMPRIMIR             : 57 58
LLAVE_DERECHA        : 41 42 42 43 44 48
LLAVE_IZQUIERDA      : 41 42 42 43 44 48
MAYOR_IGUAL_QUE      : 23
MAYOR_QUE            : 21
MENOR_IGUAL_QUE      : 22
MENOR_QUE            : 20
MIENTRAS             : 43
MULTIPLICACION       : 18
NUEVA_LINEA          : 14
NUMERO               : 31
OR                   : 27
PARA                 : 44
PARENTESIS_DERECHO   : 30 35 41 42 43 44 48 57 58
PARENTESIS_IZQUIERDO : 30 35 41 42 43 44 48 57 58
PUNTO_Y_COMA         : 4 5 6 9 10 11 12 13 44 44
RESTA                : 17
RETORNO              : 55
SI                   : 41 42
SINO                 : 42
SUMA                 : 16
TRUE                 : 28 45
VERSA                : 12 15
error                : 

Nonterminals, with rules where they appear

argumentos           : 36 38
argumentos_opt       : 35
asignacion           : 5 44 44
declaracion          : 6
empty                : 37 50 52
estructura_control   : 7
expresion            : 4 12 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 30 38 39 40 41 42 44 47 55 57
expresion_booleana   : 43
funcion_definicion   : 8
imprimir_expresion   : 11
llamada_funcion      : 13 34
parametros           : 49 53
parametros_opt       : 48
programa             : 0
retorno              : 9
sentencia            : 2 3
sentencias           : 1 2 41 42 42 43 44 51
sentencias_opt       : 48

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . sentencias
    (2) sentencias -> . sentencias sentencia
    (3) sentencias -> . sentencia
    (4) sentencia -> . expresion PUNTO_Y_COMA
    (5) sentencia -> . asignacion PUNTO_Y_COMA
    (6) sentencia -> . declaracion PUNTO_Y_COMA
    (7) sentencia -> . estructura_control
    (8) sentencia -> . funcion_definicion
    (9) sentencia -> . retorno PUNTO_Y_COMA
    (10) sentencia -> . BREAK PUNTO_Y_COMA
    (11) sentencia -> . imprimir_expresion PUNTO_Y_COMA
    (12) sentencia -> . VERSA expresion PUNTO_Y_COMA
    (13) sentencia -> . llamada_funcion PUNTO_Y_COMA
    (14) sentencia -> . NUEVA_LINEA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MENOR_QUE expresion
    (21) expresion -> . expresion MAYOR_QUE expresion
    (22) expresion -> . expresion MENOR_IGUAL_QUE expresion
    (23) expresion -> . expresion MAYOR_IGUAL_QUE expresion
    (24) expresion -> . expresion DISTINTO_QUE expresion
    (25) expresion -> . expresion IGUAL_QUE expresion
    (26) expresion -> . expresion AND expresion
    (27) expresion -> . expresion OR expresion
    (28) expresion -> . TRUE
    (29) expresion -> . FALSE
    (30) expresion -> . PARENTESIS_IZQUIERDO expresion PARENTESIS_DERECHO
    (31) expresion -> . NUMERO
    (32) expresion -> . IDENTIFICADOR
    (33) expresion -> . CADENA
    (34) expresion -> . llamada_funcion
    (40) asignacion -> . IDENTIFICADOR ASIGNACION expresion
    (15) declaracion -> . VERSA IDENTIFICADOR ASIGNACION expresion
    (41) estructura_control -> . SI PARENTESIS_IZQUIERDO expresion PARENTESIS_DERECHO LLAVE_IZQUIERDA sentencias LLAVE_DERECHA
    (42) estructura_control -> . SI PARENTESIS_IZQUIERDO expresion PARENTESIS_DERECHO LLAVE_IZQUIERDA sentencias LLAVE_DERECHA SINO LLAVE_IZQUIERDA sentencias LLAVE_DERECHA
    (43) estructura_control -> . MIENTRAS PARENTESIS_IZQUIERDO expresion_booleana PARENTESIS_DERECHO LLAVE_IZQUIERDA sentencias LLAVE_DERECHA
    (44) estructura_control -> . PARA PARENTESIS_IZQUIERDO asignacion PUNTO_Y_COMA expresion PUNTO_Y_COMA asignacion PARENTESIS_DERECHO LLAVE_IZQUIERDA sentencias LLAVE_DERECHA
    (48) funcion_definicion -> . FUNCION IDENTIFICADOR PARENTESIS_IZQUIERDO parametros_opt PARENTESIS_DERECHO LLAVE_IZQUIERDA sentencias_opt LLAVE_DERECHA
    (55) retorno -> . RETORNO expresion
    (57) imprimir_expresion -> . IMPRIMIR PARENTESIS_IZQUIERDO expresion PARENTESIS_DERECHO
    (58) imprimir_expresion -> . IMPRIMIR PARENTESIS_IZQUIERDO CADENA PARENTESIS_DERECHO
    (35) llamada_funcion -> . IDENTIFICADOR PARENTESIS_IZQUIERDO argumentos_opt PARENTESIS_DERECHO

    BREAK           shift and go to state 10
    VERSA           shift and go to state 12
    NUEVA_LINEA     shift and go to state 14
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    PARENTESIS_IZQUIERDO shift and go to state 17
    NUMERO          shift and go to state 18
    IDENTIFICADOR   shift and go to state 19
    CADENA          shift and go to state 20
    SI              shift and go to state 21
    MIENTRAS        shift and go to state 22
    PARA            shift and go to state 23
    FUNCION         shift and go to state 24
    RETORNO         shift and go to state 25
    IMPRIMIR        shift and go to state 26

    programa                       shift and go to state 1
    sentencias                     shift and go to state 2
    sentencia                      shift and go to state 3
    expresion                      shift and go to state 4
    asignacion                     shift and go to state 5
    declaracion                    shift and go to state 6
    estructura_control             shift and go to state 7
    funcion_definicion             shift and go to state 8
    retorno                        shift and go to state 9
    imprimir_expresion             shift and go to state 11
    llamada_funcion                shift and go to state 13

state 1

    (0) S' -> programa .



state 2

    (1) programa -> sentencias .
    (2) sentencias -> sentencias . sentencia
    (4) sentencia -> . expresion PUNTO_Y_COMA
    (5) sentencia -> . asignacion PUNTO_Y_COMA
    (6) sentencia -> . declaracion PUNTO_Y_COMA
    (7) sentencia -> . estructura_control
    (8) sentencia -> . funcion_definicion
    (9) sentencia -> . retorno PUNTO_Y_COMA
    (10) sentencia -> . BREAK PUNTO_Y_COMA
    (11) sentencia -> . imprimir_expresion PUNTO_Y_COMA
    (12) sentencia -> . VERSA expresion PUNTO_Y_COMA
    (13) sentencia -> . llamada_funcion PUNTO_Y_COMA
    (14) sentencia -> . NUEVA_LINEA
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MENOR_QUE expresion
    (21) expresion -> . expresion MAYOR_QUE expresion
    (22) expresion -> . expresion MENOR_IGUAL_QUE expresion
    (23) expresion -> . expresion MAYOR_IGUAL_QUE expresion
    (24) expresion -> . expresion DISTINTO_QUE expresion
    (25) expresion -> . expresion IGUAL_QUE expresion
    (26) expresion -> . expresion AND expresion
    (27) expresion -> . expresion OR expresion
    (28) expresion -> . TRUE
    (29) expresion -> . FALSE
    (30) expresion -> . PARENTESIS_IZQUIERDO expresion PARENTESIS_DERECHO
    (31) expresion -> . NUMERO
    (32) expresion -> . IDENTIFICADOR
    (33) expresion -> . CADENA
    (34) expresion -> . llamada_funcion
    (40) asignacion -> . IDENTIFICADOR ASIGNACION expresion
    (15) declaracion -> . VERSA IDENTIFICADOR ASIGNACION expresion
    (41) estructura_control -> . SI PARENTESIS_IZQUIERDO expresion PARENTESIS_DERECHO LLAVE_IZQUIERDA sentencias LLAVE_DERECHA
    (42) estructura_control -> . SI PARENTESIS_IZQUIERDO expresion PARENTESIS_DERECHO LLAVE_IZQUIERDA sentencias LLAVE_DERECHA SINO LLAVE_IZQUIERDA sentencias LLAVE_DERECHA
    (43) estructura_control -> . MIENTRAS PARENTESIS_IZQUIERDO expresion_booleana PARENTESIS_DERECHO LLAVE_IZQUIERDA sentencias LLAVE_DERECHA
    (44) estructura_control -> . PARA PARENTESIS_IZQUIERDO asignacion PUNTO_Y_COMA expresion PUNTO_Y_COMA asignacion PARENTESIS_DERECHO LLAVE_IZQUIERDA sentencias LLAVE_DERECHA
    (48) funcion_definicion -> . FUNCION IDENTIFICADOR PARENTESIS_IZQUIERDO parametros_opt PARENTESIS_DERECHO LLAVE_IZQUIERDA sentencias_opt LLAVE_DERECHA
    (55) retorno -> . RETORNO expresion
    (57) imprimir_expresion -> . IMPRIMIR PARENTESIS_IZQUIERDO expresion PARENTESIS_DERECHO
    (58) imprimir_expresion -> . IMPRIMIR PARENTESIS_IZQUIERDO CADENA PARENTESIS_DERECHO
    (35) llamada_funcion -> . IDENTIFICADOR PARENTESIS_IZQUIERDO argumentos_opt PARENTESIS_DERECHO

    $end            reduce using rule 1 (programa -> sentencias .)
    BREAK           shift and go to state 10
    VERSA           shift and go to state 12
    NUEVA_LINEA     shift and go to state 14
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    PARENTESIS_IZQUIERDO shift and go to state 17
    NUMERO          shift and go to state 18
    IDENTIFICADOR   shift and go to state 19
    CADENA          shift and go to state 20
    SI              shift and go to state 21
    MIENTRAS        shift and go to state 22
    PARA            shift and go to state 23
    FUNCION         shift and go to state 24
    RETORNO         shift and go to state 25
    IMPRIMIR        shift and go to state 26

    sentencia                      shift and go to state 27
    expresion                      shift and go to state 4
    asignacion                     shift and go to state 5
    declaracion                    shift and go to state 6
    estructura_control             shift and go to state 7
    funcion_definicion             shift and go to state 8
    retorno                        shift and go to state 9
    imprimir_expresion             shift and go to state 11
    llamada_funcion                shift and go to state 13

state 3

    (3) sentencias -> sentencia .

    BREAK           reduce using rule 3 (sentencias -> sentencia .)
    VERSA           reduce using rule 3 (sentencias -> sentencia .)
    NUEVA_LINEA     reduce using rule 3 (sentencias -> sentencia .)
    TRUE            reduce using rule 3 (sentencias -> sentencia .)
    FALSE           reduce using rule 3 (sentencias -> sentencia .)
    PARENTESIS_IZQUIERDO reduce using rule 3 (sentencias -> sentencia .)
    NUMERO          reduce using rule 3 (sentencias -> sentencia .)
    IDENTIFICADOR   reduce using rule 3 (sentencias -> sentencia .)
    CADENA          reduce using rule 3 (sentencias -> sentencia .)
    SI              reduce using rule 3 (sentencias -> sentencia .)
    MIENTRAS        reduce using rule 3 (sentencias -> sentencia .)
    PARA            reduce using rule 3 (sentencias -> sentencia .)
    FUNCION         reduce using rule 3 (sentencias -> sentencia .)
    RETORNO         reduce using rule 3 (sentencias -> sentencia .)
    IMPRIMIR        reduce using rule 3 (sentencias -> sentencia .)
    $end            reduce using rule 3 (sentencias -> sentencia .)
    LLAVE_DERECHA   reduce using rule 3 (sentencias -> sentencia .)


state 4

    (4) sentencia -> expresion . PUNTO_Y_COMA
    (16) expresion -> expresion . SUMA expresion
    (17) expresion -> expresion . RESTA expresion
    (18) expresion -> expresion . MULTIPLICACION expresion
    (19) expresion -> expresion . DIVISION expresion
    (20) expresion -> expresion . MENOR_QUE expresion
    (21) expresion -> expresion . MAYOR_QUE expresion
    (22) expresion -> expresion . MENOR_IGUAL_QUE expresion
    (23) expresion -> expresion . MAYOR_IGUAL_QUE expresion
    (24) expresion -> expresion . DISTINTO_QUE expresion
    (25) expresion -> expresion . IGUAL_QUE expresion
    (26) expresion -> expresion . AND expresion
    (27) expresion -> expresion . OR expresion

    PUNTO_Y_COMA    shift and go to state 28
    SUMA            shift and go to state 29
    RESTA           shift and go to state 30
    MULTIPLICACION  shift and go to state 31
    DIVISION        shift and go to state 32
    MENOR_QUE       shift and go to state 33
    MAYOR_QUE       shift and go to state 34
    MENOR_IGUAL_QUE shift and go to state 35
    MAYOR_IGUAL_QUE shift and go to state 36
    DISTINTO_QUE    shift and go to state 37
    IGUAL_QUE       shift and go to state 38
    AND             shift and go to state 39
    OR              shift and go to state 40


state 5

    (5) sentencia -> asignacion . PUNTO_Y_COMA

    PUNTO_Y_COMA    shift and go to state 41


state 6

    (6) sentencia -> declaracion . PUNTO_Y_COMA

    PUNTO_Y_COMA    shift and go to state 42


state 7

    (7) sentencia -> estructura_control .

    BREAK           reduce using rule 7 (sentencia -> estructura_control .)
    VERSA           reduce using rule 7 (sentencia -> estructura_control .)
    NUEVA_LINEA     reduce using rule 7 (sentencia -> estructura_control .)
    TRUE            reduce using rule 7 (sentencia -> estructura_control .)
    FALSE           reduce using rule 7 (sentencia -> estructura_control .)
    PARENTESIS_IZQUIERDO reduce using rule 7 (sentencia -> estructura_control .)
    NUMERO          reduce using rule 7 (sentencia -> estructura_control .)
    IDENTIFICADOR   reduce using rule 7 (sentencia -> estructura_control .)
    CADENA          reduce using rule 7 (sentencia -> estructura_control .)
    SI              reduce using rule 7 (sentencia -> estructura_control .)
    MIENTRAS        reduce using rule 7 (sentencia -> estructura_control .)
    PARA            reduce using rule 7 (sentencia -> estructura_control .)
    FUNCION         reduce using rule 7 (sentencia -> estructura_control .)
    RETORNO         reduce using rule 7 (sentencia -> estructura_control .)
    IMPRIMIR        reduce using rule 7 (sentencia -> estructura_control .)
    $end            reduce using rule 7 (sentencia -> estructura_control .)
    LLAVE_DERECHA   reduce using rule 7 (sentencia -> estructura_control .)


state 8

    (8) sentencia -> funcion_definicion .

    BREAK           reduce using rule 8 (sentencia -> funcion_definicion .)
    VERSA           reduce using rule 8 (sentencia -> funcion_definicion .)
    NUEVA_LINEA     reduce using rule 8 (sentencia -> funcion_definicion .)
    TRUE            reduce using rule 8 (sentencia -> funcion_definicion .)
    FALSE           reduce using rule 8 (sentencia -> funcion_definicion .)
    PARENTESIS_IZQUIERDO reduce using rule 8 (sentencia -> funcion_definicion .)
    NUMERO          reduce using rule 8 (sentencia -> funcion_definicion .)
    IDENTIFICADOR   reduce using rule 8 (sentencia -> funcion_definicion .)
    CADENA          reduce using rule 8 (sentencia -> funcion_definicion .)
    SI              reduce using rule 8 (sentencia -> funcion_definicion .)
    MIENTRAS        reduce using rule 8 (sentencia -> funcion_definicion .)
    PARA            reduce using rule 8 (sentencia -> funcion_definicion .)
    FUNCION         reduce using rule 8 (sentencia -> funcion_definicion .)
    RETORNO         reduce using rule 8 (sentencia -> funcion_definicion .)
    IMPRIMIR        reduce using rule 8 (sentencia -> funcion_definicion .)
    $end            reduce using rule 8 (sentencia -> funcion_definicion .)
    LLAVE_DERECHA   reduce using rule 8 (sentencia -> funcion_definicion .)


state 9

    (9) sentencia -> retorno . PUNTO_Y_COMA

    PUNTO_Y_COMA    shift and go to state 43


state 10

    (10) sentencia -> BREAK . PUNTO_Y_COMA

    PUNTO_Y_COMA    shift and go to state 44


state 11

    (11) sentencia -> imprimir_expresion . PUNTO_Y_COMA

    PUNTO_Y_COMA    shift and go to state 45


state 12

    (12) sentencia -> VERSA . expresion PUNTO_Y_COMA
    (15) declaracion -> VERSA . IDENTIFICADOR ASIGNACION expresion
    (16) expresion -> . expresion SUMA expresion
    (17) expresion -> . expresion RESTA expresion
    (18) expresion -> . expresion MULTIPLICACION expresion
    (19) expresion -> . expresion DIVISION expresion
    (20) expresion -> . expresion MENOR_QUE expresion
    (21) expresion -> . expresion MAYOR_QUE expresion
    (22) expresion -> . expresion MENOR_IGUAL_QUE expresion
    (23) expresion -> . expresion MAYOR_IGUAL_QUE expresion
    (24) expresion -> . expresion DISTINTO_QUE expresion
    (25) expresion -> . expresion IGUAL_QUE expresion
    (26) expresion -> . expresion AND expresion
    (27) expresion -> . expresion OR expresion
    (28) expresion -> . TRUE
    (29) expresion -> . FALSE
    (30) expresion -> . PARENTESIS_IZQUIERDO expresion PARENTESIS_DERECHO
    (31) expresion -> . NUMERO
    (32) expresion -> . IDENTIFICADOR
    (33) expresion -> . CADENA
    (34) expresion -> . llamada_funcion
    (35) llamada_funcion -> . IDENTIFICADOR PARENTESIS_IZQUIERDO argumentos_opt PARENTESIS_DERECHO

    IDENTIFICADOR   shift and go to state 47
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    PARENTESIS_IZQUIERDO shift and go to state 17
    NUMERO          shift and go to state 18
    CADENA          shift and go to state 20

    expresion                      shift and go to state 46
    llamada_funcion                shift and go to state 48

state 13

    (13) sentencia -> llamada_funcion . PUNTO_Y_COMA
    (34) expresion -> llamada_funcion .

  ! shift/reduce conflict for PUNTO_Y_COMA resolved as shift
    PUNTO_Y_COMA    shift and go to state 49
    SUMA            reduce using rule 34 (expresion -> llamada_funcion .)
    RESTA           reduce using rule 34 (expresion -> llamada_funcion .)
    MULTIPLICACION  reduce using rule 34 (expresion -> llamada_funcion .)
    DIVISION        reduce using rule 34 (expresion -> llamada_funcion .)
    MENOR_QUE       reduce using rule 34 (expresion -> llamada_funcion .)
    MAYOR_QUE       reduce using rule 34 (expresion -> llamada_funcion .)
    MENOR_IGUAL_QUE reduce using rule 34 (expresion -> llamada_funcion .)
    MAYOR_IGUAL_QUE reduce using rule 34 (expresion -> llamada_funcion .)
    DISTINTO_QUE    reduce using rule 34 (expresion -> llamada_funcion .)
    IGUAL_QUE       reduce using rule 34 (expresion -> llamada_funcion .)
    AND             reduce using rule 34 (expresion -> llamada_funcion .)
    OR              reduce using rule 34 (expresion -> llamada_funcion .)

  ! PUNTO_Y_COMA    [ reduce using rule 34 (expresion -> llamada_funcion .) ]


state 14

    (14) sentencia -> NUEVA_LINEA .

    BREAK           reduce using rule 14 (sentencia -> NUEVA_LINEA .)
    VERSA           reduce using rule 14 (sentencia -> NUEVA_LINEA .)
    NUEVA_LINEA     reduce using rule 14 (sentencia -> NUEVA_LINEA .)
    TRUE            reduce using rule 14 (sentencia -> NUEVA_LINEA .)
    FALSE           reduce using rule 14 (sentencia -> NUEVA_LINEA .)
    PARENTESIS_IZQUIERDO reduce using rule 14 (sentencia -> NUEVA_LINEA .)
    NUMERO          reduce using rule 14 (sentencia -> NUEVA_LINEA .)
    IDENTIFICADOR   reduce using rule 14 (sentencia -> NUEVA_LINEA .)
    CADENA          reduce using rule 14 (sentencia -> NUEVA_LINEA .)
    SI              reduce using rule 14 (sentencia -> NUEVA_LINEA .)
    MIENTRAS        reduce using rule 14 (sentencia -> NUEVA_LINEA .)
    PARA            reduce using rule 14 (sentencia -> NUEVA_LINEA .)
    FUNCION         reduce using rule 14 (sentencia -> NUEVA_LINEA .)
    RETORNO         reduce using rule 14 (sentencia -> NUEVA_LINEA .)
    IMPRIMIR        reduce using rule 14 (sentencia -> NUEVA_LINEA .)
    $end            reduce using rule 14 (sentencia -> NUEVA_LINEA .)
    LLAVE_DERECHA   reduce using rule 14 (sentencia -> NUEVA_LINEA .)


state 15

    (28) expresion -> TRUE .

    PUNTO_Y_COMA    reduce using rule 28 (expresion -> TRUE .)
    SUMA            reduce using rule 28 (expresion -> TRUE .)
    RESTA           reduce using rule 28 (expresion -> TRUE .)
    MULTIPLICACION  reduce using rule 28 (expresion -> TRUE .)
    DIVISION        reduce using rule 28 (expresion -> TRUE .)
    MENOR_QUE       reduce using rule 28 (expresion -> TRUE .)
    MAYOR_QUE       reduce using rule 28 (expresion -> TRUE .)
    MENOR_IGUAL_QUE reduce using rule 28 (expresion -> TRUE .)
    MAYOR_IGUAL_QUE reduce using rule 28 (expresion -> TRUE .)
    DISTINTO_QUE    reduce using rule 28 (expresion -> TRUE .)
    IGUAL_QUE       reduce using rule 28 (expresion -> TRUE .)
    AND             reduce using rule 28 (expresion -> TRUE .)
    OR              reduce using rule 28 (expresion -> TRUE .)
    PARENTESIS_DERECHO reduce using rule 28 (expresion -> TRUE .)
    COMA            reduce using rule 28 (expresion -> TRUE .)


state 16
